# Compliance-Manager-Gemini-CLI-Extension

./: .env.example  .gitignore  CONTRIBUTING.md  CORRECT_USAGE.md  DEBUG_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  EXAMPLES.md  EXAMPLE_COMMANDS.md  FINAL_FIX.md  FIXED.md  GEMINI.md  GETTING_STARTED.md  INSTALLATION.md  LICENSE  PRD_Google_Format.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RESTART_INSTRUCTIONS.md  SOLUTION.md  START_HERE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_MCP.md  USAGE.md  compliance_manager_mcp.py  diagnose_mcp.sh  fix_cloudshell.sh  gemini-extension.json  install.sh  pyproject.toml  requirements.txt  run_mcp.sh  setup.py  start_gemini.sh  test_extension.py  test_mcp_server.py  test_with_org.sh
.gemini/extensions/compliance-manager/: GEMINI.md  gemini-extension.json  pyproject.toml  run_mcp.sh
