[project]
name = "compliance-manager-gemini-cli-extension"
version = "1.0.0"
description = "Gemini CLI extension for Google Cloud Compliance Manager"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "aiohttp>=3.9.0",
    "google-cloud-cloudsecuritycompliance>=0.2.0",
]

