[project]
name = "compliance-manager-gemini-cli-extension"
version = "1.0.0"
description = "Gemini CLI extension for Google Cloud Compliance Manager"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Varun Bhardwaj", email = "varun@example.com" }
]
keywords = ["google", "security", "compliance", "compliance-manager", "mcp", "scc", "gemini-cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "google-cloud-cloudsecuritycompliance>=0.2.0",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/vb30/Compliance-Manager-Gemini-CLI-Extension"
Documentation = "https://github.com/vb30/Compliance-Manager-Gemini-CLI-Extension#readme"
Repository = "https://github.com/vb30/Compliance-Manager-Gemini-CLI-Extension"
Issues = "https://github.com/vb30/Compliance-Manager-Gemini-CLI-Extension/issues"
"MCP Server" = "https://github.com/vb30/Compliance-Manager-MCP-Server"

[project.scripts]
compliance_manager_mcp = "compliance_manager_mcp:main"

[project.entry-points.mcp]
compliance-manager-mcp = "compliance_manager_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

